# adventofcode-2024

./: CMakeLists.txt  README.md  new-day.sh
day-01/: main.cpp  main2.cpp
day-02/: part-1.cpp  part-2.cpp
day-03/: part-1.cpp  part-2.cpp
day-04/: part-1.cpp  part-2.cpp
day-05/: part-1.cpp  part-2.cpp
day-06/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-07/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-08/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-09/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-10/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-11/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-12/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-13/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-14/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-15/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-16/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-17/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-18/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-19/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-20/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-21/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-22/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-23/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-24/: CMakeLists.txt  part-1.cpp  part-2.cpp
day-25/: CMakeLists.txt  part-1.cpp
day-template/: CMakeLists.txt  part-1.cpp
utils/: CMakeLists.txt
utils/hash/: pair_support.hpp
utils/io/: CMakeLists.txt  file_reader.cpp  file_reader.hpp  ostream_support.hpp
utils/str/: parse.hpp  split.hpp
utils/unittests/: assert.hpp
utils/world/: CMakeLists.txt
utils/world/plane/: direction.hpp  object.cpp  object.hpp  vec2.hpp
