cmake_minimum_required(VERSION 3.10)
project(adventofcode2024)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -pedantic -g")

add_subdirectory(utils)

add_subdirectory(day-06)
add_subdirectory(day-07)
add_subdirectory(day-08)
add_subdirectory(day-09)
add_subdirectory(day-10)
add_subdirectory(day-11)
add_subdirectory(day-12)
add_subdirectory(day-13)
add_subdirectory(day-14)
add_subdirectory(day-15)
add_subdirectory(day-16)
add_subdirectory(day-17)
add_subdirectory(day-18)
add_subdirectory(day-19)
add_subdirectory(day-20)
add_subdirectory(day-21)
add_subdirectory(day-22)
add_subdirectory(day-23)
